# psysonic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRIVACY.md  README.md  flake.nix  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: frontend-hot-path-files.txt  hot-path-files.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: frontend-tests.yml  next.yml  nix-npm-deps-hash-sync.yml  promote-main-to-next.yml  promote-next-to-release.yml  release.yml  reusable-channel-publish.yml  rust-tests.yml  upstream-release-nix.yml
nix/: psysonic.nix  upstream-sources.json
scripts/: check-css-import-graph.mjs  check-frontend-hot-path-coverage.sh  check-hot-path-coverage.sh  generate-update-manifest.js
src/: App.tsx  hotCachePrefetch.ts  i18n.ts  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/psysonic-analysis/: Cargo.toml
src-tauri/crates/psysonic-analysis/src/: analysis_runtime.rs  commands.rs  lib.rs
src-tauri/crates/psysonic-analysis/src/analysis_cache/: compute.rs  mod.rs  store.rs
src-tauri/crates/psysonic-audio/: Cargo.toml
src-tauri/crates/psysonic-audio/src/: autoeq_commands.rs  commands.rs  decode.rs  dev_io.rs  device_commands.rs  device_watcher.rs  engine.rs  helpers.rs  ipc.rs  lib.rs  mix_commands.rs  play_input.rs  preload_commands.rs  preview.rs  progress_task.rs  radio_commands.rs  sources.rs  state.rs  transport_commands.rs
src-tauri/crates/psysonic-audio/src/stream/: icy.rs  mod.rs  mp4.rs  radio.rs  ranged_http.rs  reader.rs  track_stream.rs
src-tauri/crates/psysonic-integration/: Cargo.toml
src-tauri/crates/psysonic-integration/src/: bandsintown.rs  discord.rs  lib.rs  remote.rs
src-tauri/crates/psysonic-integration/src/navidrome/: client.rs  covers.rs  mod.rs  playlists.rs  queries.rs  users.rs
src-tauri/crates/psysonic-syncfs/: Cargo.toml
src-tauri/crates/psysonic-syncfs/src/: file_transfer.rs  lib.rs
src-tauri/crates/psysonic-syncfs/src/cache/: downloads.rs  fs_utils.rs  hot.rs  mod.rs  offline.rs
src-tauri/crates/psysonic-syncfs/src/sync/: batch.rs  device.rs  mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: analysis_runtime.rs  audio.rs  lib.rs  main.rs  taskbar_win.rs  tray_runtime.rs
src/api/: lastfm.ts  lyricsplus.ts  navidromeAdmin.ts  navidromeBrowse.ts  navidromeSmart.ts  orbit.ts  subsonic.async.test.ts  subsonic.contract.test.ts  subsonic.ts  subsonicAlbumInfo.ts  subsonicArtists.ts  subsonicClient.ts  subsonicEntityWithCredentials.ts  subsonicGenres.ts  subsonicLibrary.ts  subsonicLyrics.ts  subsonicPlayQueue.ts  subsonicPlaylists.ts  subsonicRadio.ts  subsonicRatings.test.ts  subsonicRatings.ts  subsonicScrobble.test.ts  subsonicScrobble.ts  subsonicSearch.test.ts  subsonicSearch.ts  subsonicStarRating.ts  subsonicStatistics.ts  subsonicStreamUrl.ts  subsonicTypes.ts
src/app/: AppRoutes.tsx  AppShell.tsx  MainApp.tsx  MiniPlayerApp.test.tsx  MiniPlayerApp.tsx  RequireAuth.test.tsx  RequireAuth.tsx  TauriEventBridge.tsx  bootstrap.test.ts  bootstrap.ts  windowKind.test.ts  windowKind.ts
src/components/: AlbumCard.tsx  AlbumHeader.tsx  AlbumRow.tsx  AlbumTrackList.tsx  AppShellQueueResizerSeam.tsx  AppUpdater.tsx  ArtistCardLocal.tsx  ArtistRow.tsx  BecauseYouLikeRail.tsx  BottomNav.tsx  CachedImage.tsx  ChangelogModal.tsx  ConnectionIndicator.tsx  ContextMenu.test.tsx  ContextMenu.tsx  CoverLightbox.test.tsx  CustomSelect.tsx  Equalizer.tsx  FpsOverlay.tsx  FullscreenPlayer.test.tsx  FullscreenPlayer.tsx  GenreFilterBar.tsx  Hero.tsx  HostApprovalQueue.tsx  LastfmIcon.tsx  LiveSearch.tsx  LosslessAlbumsRail.tsx  LyricsPane.tsx  MarqueeText.tsx  MiniContextMenu.tsx  MiniPlayer.test.tsx  MiniPlayer.tsx  MobileMoreOverlay.tsx  MobilePlayerView.tsx  MobileSearchOverlay.tsx  NowPlayingDropdown.tsx  NowPlayingInfo.tsx  OrbitDiagnosticsPopover.tsx  OrbitGuestQueue.tsx  OrbitJoinModal.tsx  (+28 more)
(+1324 files in other folders)
