[package]
name = "psysonic-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
psysonic-core = { path = "../psysonic-core" }

tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls", "blocking"] }
futures-util = "0.3"
discord-rich-presence = "1.1"
url = "2"
md5 = "0.8"
