[package]
name = "psysonic-syncfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
psysonic-core = { path = "../psysonic-core" }
psysonic-analysis = { path = "../psysonic-analysis" }
psysonic-audio = { path = "../psysonic-audio" }

tauri = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls", "blocking", "gzip", "brotli"] }
futures-util = "0.3"
sysinfo = { version = "0.38", default-features = false, features = ["disk"] }
url = "2"
md5 = "0.8"
lofty = "0.24"
id3 = "1.16.4"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "fs", "rt-multi-thread"] }
wiremock = { workspace = true }
